# Miro

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  pnpm-lock.yaml.32599241  pnpm-workspace.yaml  tsconfig.json
apps/miro-api/: package.json  tsconfig.json
apps/miro-api/src/: agent-prompt.ts  ai-helpers.ts  app.ts  config.ts  model-cache.ts  run-lean.ts  run.ts  types.ts  user-service.ts
apps/miro-api/test/: ai-config.test.ts  ai-helpers.test.ts  ai-stream.test.ts  ai-v2.test.ts
apps/miro-desktop/: package.json
apps/miro-desktop/scripts/: build-api-sidecar.mjs
apps/miro-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/miro-desktop/src-tauri/capabilities/: default.json
apps/miro-desktop/src-tauri/icons/: icon.icns
apps/miro-desktop/src-tauri/permissions/: desktop-vault.toml
apps/miro-desktop/src-tauri/src/: api_process.rs  commands.rs  error.rs  keychain.rs  lib.rs  main.rs
apps/miro-desktop/src-tauri/src/vault/: crypto.rs  db.rs  mod.rs
apps/miro-mobile/: App.tsx  app.json  package.json  tsconfig.json
apps/miro-mobile/app/: _layout.tsx  gallery.tsx  index.tsx  settings.tsx
apps/miro-mobile/src/: settings-context.tsx
apps/miro-web/: next.config.mjs  package.json  tailwind.config.js  tsconfig.json
docs/: README.md  architecture-modularity.md  architecture.md  desktop.md  frontend-spec.md  getting-started.md  milestone-0.3.md  mobile.md  overview.md  product-surfaces.md  projects-design.md  pwa-deploy.md  self-hosting.md  sidecar-strategy.md  stack.md  usage.md
(+71 files in other folders)
